# unittest-scenarios

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  tox.ini
.github/workflows/: release.yml  test.yml
src/unittest_scenarios/: __init__.py  file_cmp_mixin.py  isolated_working_dir_mixin.py  scenario_testcase_mixin.py
src/unittest_scenarios/utils/: __init__.py  archive.py
tests/: test_file_cmp.py  test_file_cmp_mixin.py  test_isolated_working_dir_mixin.py  test_scenario_mixin.py  win_tempfile.py
tests/test_files/equal_tars/a/: initial_state.tar
tests/test_files/missing_initial_state/a/final_state/: a.txt
tests/test_files/not_equal_dirs/a/final_state/: a.txt
tests/test_files/not_equal_tars/a/: final_state.tar
