[project]
name = "unittest-scenarios"
version = "1.1.0"
description = "Add scenario based testing to unittest."
authors = [
    { name = "Josh Bedwell", email = "rcxwhiz@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
]
classifiers = [
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "Framework :: Pytest"
]
keywords = [ "unittest", "pytest" ]

[project.urls]
repository = "https://github.com/rcxwhiz/unittest-scenarios"


[tool.poetry]
packages = [{include = "unittest_scenarios", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<4"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
